<resources>
    <string name="app_name">Assignment2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="agreeToTerms">Agree to the Terms and Conditions</string>
    <string name="EventEmail">Receive Event Emails</string>
    <string name="register">Register</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="enterEmail">Enter your email</string>
    <string name="enterName">Enter your name</string>
    <string name="Heading">Hong_Newsletter_Subscription_Form</string>
</resources>